--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
   "name": "gp3",
   "version": "1.0.0",
   "description": "Group Project 3",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "client": "cd client && npm run start",
+    "install": "cd client && npm install",
+    "build": "cd client && npm run build",
+    "heroku-postbuild": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -16,8 +22,13 @@
     "url": "https://github.com/dajoyce/GP3/issues"
   },
   "homepage": "https://github.com/dajoyce/GP3#readme",
+  "devDependencies": {
+    "concurrently": "^4.1.0",
+    "nodemon": "^1.18.10"
+  },
   "dependencies": {
     "express": "^4.16.4",
+    "if-env": "^1.0.4",
     "firebase": "^5.9.1"
   }
 }
