--- a/client/package.json
+++ b/client/package.json
@@ -5,14 +5,14 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
-    "bootstrap": "^4.3.1",
-    "leaflet": "^1.4.0",
+    "axios": "^0.18.0",
+    "dotenv": "^7.0.0",
+    "google-maps-react": "^2.0.2",
     "react": "^16.8.5",
-    "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.5",
-    "react-leaflet": "^2.2.1",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "react-swipeable-views": "^0.13.1"
   },
   "scripts": {
     "start": "react-scripts start",
