--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.16.4",
     "firebase": "^5.9.1",
     "if-env": "^1.0.4",
-    "mongod": "^2.0.0"
+    "mongod": "^2.0.0",
+    "mongoose": "^5.4.20"
   }
 }
