--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "citysdk": "^2.0.8",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "firebase": "^5.9.1",
     "if-env": "^1.0.4",
