--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.18.0",
     "dotenv": "^7.0.0",
     "google-maps-react": "^2.0.2",
+    "query-string": "^6.5.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-google-autocomplete": "^1.0.18",
